filtering and sorting posts

--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -64,6 +64,8 @@
 							<li><button class = "accordionButton" value="genre">FPS</button></li>
 							<li><button class = "accordionButton" value="genre">Racing</button></li>
 							<li><button class = "accordionButton" value="genre">Strategy</button></li>
+							<li><button class = "accordionButton" value="genre">Fighting</button></li>
+							<li><button class = "accordionButton" value="genre">Sports</button></li>	
 						</ul>
 					</div>
 				</li>
