search implemented and sorting bug fixed

--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -24,7 +24,7 @@
 				<li class ='sideNavList'>
 
 					<form id="userSearchInput">
-							<input type="text" placeholder="Search for a Post">
+							<input id="searchParam" type="text" placeholder="Search for a Post">
 							<input type="submit" value="Find Post">
 					</form>
 				</li>
@@ -65,7 +65,7 @@
 							<li><button class = "accordionButton" value="genre">Racing</button></li>
 							<li><button class = "accordionButton" value="genre">Strategy</button></li>
 							<li><button class = "accordionButton" value="genre">Fighting</button></li>
-							<li><button class = "accordionButton" value="genre">Sports</button></li>	
+							<li><button class = "accordionButton" value="genre">Sports</button></li>
 						</ul>
 					</div>
 				</li>
