--- a/final/public/styles/reports.css
+++ b/final/public/styles/reports.css
@@ -1,11 +1,12 @@
 
 
+
 .reportItem {
     width: 98%;
     margin: 1%;
     background-color: #24272f;
     overflow: auto;
-    
+
 }
 
 .reportItem .profilePic {
@@ -51,8 +52,8 @@
     margin: 1%;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 10%; 
-    background-color:   #4d0000; 
+    border-radius: 10%;
+    background-color:   #4d0000;
     color: white;
     font-size: 1.2em;
 }
@@ -60,4 +61,26 @@
 .closeReport:hover {
         background-color:   #003300;
 
+}
+
+.pageNumberWrapper {
+  display: block;
+  width: 100%;
+  margin-left: 45%;
+}
+/*
+323741
+06858C
+45C48B
+FFD039
+EB3E4A
+*/
+.pageNumber{
+  background-color: #4d0000;
+  color: white;
+  margin-right: 10px;
+}
+
+.pageNumber:hover{
+  background-color: #EB3E4A;
 }
