--- a/final/public/styles/user_account_style.css
+++ b/final/public/styles/user_account_style.css
@@ -271,8 +271,19 @@ button:hover {
 
 #profilePic {
 }
-
 #profilePicContainer {
+    position: relative;
+    cursor: pointer;
+    width: 15em;
+    height: 15em;
+    min-width: 32px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid rgba(0,0,0,0);
+}
+
+#profilePicEditableContainer {
     position: relative;
     cursor: pointer;
     width: 15em;
@@ -295,7 +306,7 @@ button:hover {
     border-radius: 50%;
     border: 2px solid rgba(0,0,0,0);
 }
-#profilePicContainer:hover #profilePicOverlay {
+#profilePicEditableContainer:hover #profilePicOverlay {
     display: block;
 }
 #profilePicOverlay svg {
