--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -38,10 +38,14 @@
 							<li><button class = "accordionButton" value="platform">PS3</button></li>
 							<li><button class = "accordionButton" value="platform">PSVita</button></li>
 							<li><button class = "accordionButton" value="platform">PC</button></li>
+							<li><button class = "accordionButton" value="platform">IOS</button></li>
+							<li><button class = "accordionButton" value="platform">Android</button></li>
 							<li><button class = "accordionButton" value="platform">Switch</button></li>
 							<li><button class = "accordionButton" value="platform">WiiU</button></li>
 							<li><button class = "accordionButton" value="platform">Wii</button></li>
 							<li><button class = "accordionButton" value="platform">3DS</button></li>
+							<li><button class = "accordionButton" value="platform">New3DS</button></li>
+
 						</ul>
 					</div>
 
@@ -53,7 +57,7 @@
 							<li><button class = "accordionButton" value="people">4</button></li>
 							<li><button class = "accordionButton" value="people">5</button></li>
 							<li><button class = "accordionButton" value="people">6</button></li>
-							<li><button class = "accordionButton" value="people">7+</button></li>
+							<li><button class = "accordionButton" value="people">7</button></li>
 						</ul>
 					</div>
 
