--- a/final/public/styles/user_header.css
+++ b/final/public/styles/user_header.css
@@ -31,6 +31,7 @@ header #headerBG {
 	height: 40px;
 	width: 40px;
 	cursor: pointer;
+    display: inline-block;
 	transform: scale(1);
 	transition: transform 200ms;
 }
