buttons actually work kind of

--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -64,12 +64,26 @@
 					<button class="accordion">Genre</button>
 					<div class="panel">
 						<ul>
-							<li><button class = "accordionButton" value="genre">MMRPG</button></li>
-							<li><button class = "accordionButton" value="genre">FPS</button></li>
-							<li><button class = "accordionButton" value="genre">Racing</button></li>
-							<li><button class = "accordionButton" value="genre">Strategy</button></li>
+							<li><button class = "accordionButton" value="genre">		Point-and-click</button></li>
 							<li><button class = "accordionButton" value="genre">Fighting</button></li>
-							<li><button class = "accordionButton" value="genre">Sports</button></li>
+							<li><button class = "accordionButton" value="genre">Shooter</button></li>
+							<li><button class = "accordionButton" value="genre">Music</button></li>
+							<li><button class = "accordionButton" value="genre">Platform</button></li>
+							<li><button class = "accordionButton" value="genre">Puzzle</button></li>
+							<li><button class = "accordionButton" value="genre">Racing</button></li>
+							<li><button class = "accordionButton" value="genre">Real Time Strategy (RTS)</button></li>
+							<li><button class = "accordionButton" value="genre">Role-playing (RPG)</button></li>
+							<li><button class = "accordionButton" value="genre">Simulator</button></li>
+							<li><button class = "accordionButton" value="genre">Sport</button></li>
+							<li><button class = "accordionButton" value="genre">Strategy</button></li>
+							<li><button class = "accordionButton" value="genre">Turn-based strategy (TBS)</button></li>
+							<li><button class = "accordionButton" value="genre">Tactical</button></li>
+							<li><button class = "accordionButton" value="genre">Hack and slash/Beat 'em up</button></li>
+							<li><button class = "accordionButton" value="genre">Quiz/Trivia</button></li>
+							<li><button class = "accordionButton" value="genre">Pinball</button></li>
+							<li><button class = "accordionButton" value="genre">Adventure</button></li>
+							<li><button class = "accordionButton" value="genre">Indie</button></li>
+							<li><button class = "accordionButton" value="genre">Arcade</button></li>
 						</ul>
 					</div>
 				</li>
