--- a/final/public/styles/user_account_style.css
+++ b/final/public/styles/user_account_style.css
@@ -10,9 +10,8 @@
 }
 
 #leftSideAccountPage img {
-    width: 15em;
-    height: 15em;
-    min-width: 32px;
+    width: 100%;
+    height: 100%;
     display: block;
     margin-top: 5%;
     margin-left: auto;
@@ -269,31 +268,18 @@ button:hover {
     margin-bottom: 20px;
 }
 
-#profilePic {
-}
-#profilePicContainer {
+#profilePicContainer,
+#profilePicEditableContainer {
     position: relative;
     cursor: pointer;
-    width: 15em;
-    height: 15em;
-    min-width: 32px;
+    width: 20vw;
+    height: 20vw;
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
     border: 2px solid rgba(0,0,0,0);
 }
 
-#profilePicEditableContainer {
-    position: relative;
-    cursor: pointer;
-    width: 15em;
-    height: 15em;
-    min-width: 32px;
-    border-radius: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid rgba(0,0,0,0);
-}
 #profilePicOverlay {
     position: absolute;
     display: none;
@@ -344,6 +330,13 @@ button:hover {
 .closeDialog:hover svg {
     fill: #EB3E4A;
     opacity: 1;
+}
+
+#editProfilePicError {
+    position: absolute;
+    color: #EB3E4A;
+    top: -1.5em;
+    z-index: 1;
 }
 
 @media screen and (max-height: 500px) {
