--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -29,6 +29,16 @@
 					</form>
 				</li>
 				<li class ='sideNavList'>
+					<button class="accordion">Posts</button>
+					<div class="panel">
+						<ul>
+							<li><button class = "accordionButton" value="posts">Joined</button></li>
+							<li><button class = "accordionButton" value="posts">Created</button></li>
+							<li><button class = "accordionButton" value="posts">Waiting</button></li>
+
+						</ul>
+					</div>
+
 					<button class="accordion">Game Station</button>
 					<div class="panel">
 						<ul>
