--- a/final/public/styles/post-edit.css
+++ b/final/public/styles/post-edit.css
@@ -6,7 +6,7 @@ FFD039
 EB3E4A
 */
 #post-edit hr {
-	margin: 10px 0 20px 0;
+	margin: 20px 0 20px 0;
 }
 
 .editFormInputLabel {
@@ -14,7 +14,6 @@ EB3E4A
 	font-family: "EncodeSans-Light";
 	opacity: 0.75;
 	margin: 0;
-	margin-bottom: 10px;
 	margin-right: 10px;
 }
 .editFormInputLabel.active {
@@ -22,6 +21,7 @@ EB3E4A
 	color: #45C48B;
 }
 .editFormInput {
+	position: relative;
 	display: inline-block;
 	box-sizing: border-box;
 	font-family: "EncodeSans-Regular";
@@ -29,10 +29,13 @@ EB3E4A
 	outline: none;
 	resize: none;
 	border: none;
+	font-size: 100%;
+	line-height: 1.7;
 	border-radius: 3px;
 	opacity: 0.95;
 	background-color: #DDD;
 	padding: 7px 12px;
+	margin-top: 10px;
 }
 .editFormInput:focus {
 	box-sizing: border-box;
@@ -64,10 +67,40 @@ EB3E4A
 #game-edit {
 	overflow: visible;
 }
-#gameTitle-edit {
+#gameTitle-edit,
+#platform-edit {
 	font-size: 1.25rem;
-	width: 300px;
 	max-width: 100%;
+}
+#platform-edit {
+	width: 100%;
+	z-index: 1;
+	height: 48px;
+	padding-right: 48px;
+	background: none;
+	-webkit-appearance: none;
+	margin-top: 0;
+}
+#platform-editContainer {
+	display: inline-block;
+    position: relative;
+	background-color: #DDD;
+	border-radius: 3px;
+	opacity: 0.95;
+	width: 100%;
+	margin-top: 10px;
+}
+#platform-editContainer.active {
+	opacity: 1;
+}
+#platform-editContainer svg {
+    position: absolute;
+    right: 0;
+    top: 1px;
+    opacity: 0.7;
+    height: 20px;
+    width: 20px;
+    padding: 14px;
 }
 #gameTitle-editDropdown {
 	display: none;
@@ -114,10 +147,14 @@ EB3E4A
 	border-bottom-right-radius: 3px;
 }
 
-#spaceAvailableNum-edit {
+#spaceAvailable-edit {
 	font-size: 1.25rem;
 	width: 75px;
 	max-width: 100%;
+	margin-top: 0;
+}
+#spaceAvailable-editLabel {
+	margin-bottom: 10px;
 }
 #userMessage-edit {
 	position: relative;
@@ -142,8 +179,10 @@ EB3E4A
 	border-radius: 3px;
 	transform: translateY(0);
 	transition: transform 50ms;
+	outline: none;
 }
-#post-editSubmit:hover {
+#post-editSubmit:hover,
+#post-editSubmit:focus {
 	background-color: #2fbf5d;
 	border: 3px solid rgba(0,0,0,0.3);
 	color: black;
@@ -152,4 +191,8 @@ EB3E4A
 #post-editSubmit:active {
 	opacity: 0.8;
 	transform: translateY(4px);
+}
+
+#gameDetails > div:not(:first-child) {
+	margin-top: 20px;
 }
