--- a/final/views/post_edit.hbs
+++ b/final/views/post_edit.hbs
@@ -21,25 +21,53 @@
 
 	<section id="contents">
 		<div id="threadContainer"><section id="thread">
-			<section id="post-editSection"><form id="post-edit" action="">
-				<div id="postTitle-editContainer"><span id="postTitle-editLabel" class="editFormInputLabel">Title: </span><input id="postTitle-edit" class="editFormInput" value="{{#if isEdit}} {{post.title}} {{/if}}"></div>
-				<div id="keywords-editContainer"><span id="keywords-editLabel" class="editFormInputLabel">Keywords: </span><input id="keywords-edit" class="editFormInput" value="{{#each post.keywords}}{{this}} {{/each}}"></div>
+			<section id="post-editSection"><form id="post-edit">
+				<div id="postTitle-editContainer"><span id="postTitle-editLabel" class="editFormInputLabel">Title: </span><input id="postTitle-edit" class="editFormInput" value="{{#if isEdit}} {{post.title}} {{/if}}" name="title"></div>
+				<div id="keywords-editContainer"><span id="keywords-editLabel" class="editFormInputLabel">Keywords: </span><input id="keywords-edit" class="editFormInput" value="{{#each post.keywords}}{{this}} {{/each}}" name="keywords"></div>
 				<hr>
 				<div id="gameDetailsContainer"><section id="gameDetails">
 					<div id="gameContainer"><section id="game-edit" class="sectionCard">
-						<span id="gameTitle-editLabel" class="editFormInputLabel">Game to Play: </span><input id="gameTitle-edit" class="editFormInput" name="game" autocomplete = "off" value="{{#if isEdit}}{{post.gameTitle}}{{/if}}">
+						<span id="gameTitle-editLabel" class="editFormInputLabel">Game to Play: </span>
+						<br>
+						<input id="gameTitle-edit" class="editFormInput" name="game" autocomplete = "off" value="{{#if isEdit}}{{post.gameTitle}}{{/if}}"">
 						<div id="gameTitle-editDropdownContainer">
 
 						</div>
 					</section></div>
+					<div id="platformContainer"><section id="platform" class="sectionCard">
+						<span id="platform-editLabel" class="editFormInputLabel">Platform: </span>
+						<br>
+						<div id="platform-editContainer">
+						<select id="platform-edit" class="editFormInput" name="plaforms">
+							<option value=""></option>
+							<option value="PS4">PS4</option>
+							<option value="PC">PC</option>
+							<option value="Xbox One">Xbox One</option>
+							<option value="Nintendo Switch">Nintendo Switch</option>
+							<option value="Nintendo 3DS">Nintendo 3DS</option>
+							<option value="Board Games">Board Games</option>
+						</select>
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"/></svg>
+					</div>
+					</section></div>
 					<div id="spaceAvailableContainer"><section id="spaceAvailable" class="sectionCard">
-						<span id="spaceAvailable-editLabel" class="editFormInputLabel">Players Needed: </span><input id="spaceAvailableNum-edit" class="editFormInput" value="1">
+						<span id="spaceAvailable-editLabel" class="editFormInputLabel">Players Needed: </span><input id="spaceAvailable-edit" class="editFormInput" value="1" name="playersNeeded" type="number">
+					</section></div>
+					<div id="timeDateContainer"><section id="timeDate" class="sectionCard">
+						<span id="timeDate-editLabel" class="editFormInputLabel">Time and Date: </span>
+						<br>
+						<input id="time-edit" class="editFormInput" type="time" name="postTime">
+						<input id="date-edit" class="editFormInput" type="date" name="postDate">
+					</section></div>
+					<div id="locationContainer"><section id="location" class="sectionCard">
+						<span id="location-editLabel" class="editFormInputLabel">Location: </span>
+						<br>
+						<input id="location-edit" class="editFormInput" value="" name="meetLocation">
 					</section></div>
 				</section></div>
 				<div id="postDetailsContainer"><section id="postDetails" class="sectionCard">
 					<h4 class="editFormInputLabel">Edit Post Details</h4>
-					<textarea id="userMessage-edit" class="editFormInput">{{#if isEdit}}{{post.details}}{{/if}}
-					</textarea>
+					<textarea id="userMessage-edit" class="editFormInput" name="details">{{#if isEdit}}{{post.details}}{{/if}}</textarea>
 				</section></div>
 				<div class="clearFloat"></div>
 				<button id="post-editSubmit">Submit!</button>
