fixed header home link

--- a/final/views/partials/header_partial.hbs
+++ b/final/views/partials/header_partial.hbs
@@ -10,7 +10,7 @@
 						<div class="bar"></div>
 					</div>
 					<ul id="topNav_links">
-						<li><a title="Back to home" class="linkAnimate" href="../home">Home</a></li>
+						<li><a title="Back to home" class="linkAnimate" href="/home">Home</a></li>
                         <li><a class="linkAnimate" href="#">Go to top</a></li>
 						<li id="loginButtonContainer">
 							<div id="navUser">
