--- a/final/public/styles/post-main.css
+++ b/final/public/styles/post-main.css
@@ -86,6 +86,7 @@ div.clearFloat {
 	font-size: 13px;
 }
 #gameImg {
+	object-fit: contain;
     display: inline-block;
     height: 20em;
 	width: 100%;
@@ -147,6 +148,7 @@ h4 {
 
 .userProfilePic {
 	vertical-align: middle;
+	width: 3em;
 	height: 3em;
 	border-radius: 50%;
 	border: 2px solid rgba(255,255,255,1);
