--- a/final/views/post_edit.hbs
+++ b/final/views/post_edit.hbs
@@ -22,13 +22,12 @@
 	<section id="contents">
 		<div id="threadContainer"><section id="thread">
 			<section id="post-editSection"><form id="post-edit">
-				<div id="postTitle-editContainer"><span id="postTitle-editLabel" class="editFormInputLabel">Title: </span><input id="postTitle-edit" class="editFormInput" value="{{#if isEdit}} {{post.title}} {{/if}}" name="title"></div>
+				<div id="postTitle-editContainer"><span id="postTitle-editLabel" class="editFormInputLabel">Title: *</span><input id="postTitle-edit" class="editFormInput" value="{{#if isEdit}}{{post.title}}{{/if}}" name="title"></div>
 				<div id="keywords-editContainer"><span id="keywords-editLabel" class="editFormInputLabel">Keywords: </span><input id="keywords-edit" class="editFormInput" value="{{#each post.keywords}}{{this}} {{/each}}" name="keywords"></div>
 				<hr>
 				<div id="gameDetailsContainer"><section id="gameDetails">
 					<div id="gameContainer"><section id="game-edit" class="sectionCard">
-						<span id="gameTitle-editLabel" class="editFormInputLabel">Game to Play: </span>
-						<br>
+						<span id="gameTitle-editLabel" class="editFormInputLabel">Game to Play: *</span>
 						<input id="gameTitle-edit" class="editFormInput" name="game" autocomplete = "off" value="{{#if isEdit}}{{post.gameTitle}}{{/if}}"">
 						<div id="gameTitle-editDropdownContainer">
 
@@ -36,7 +35,6 @@
 					</section></div>
 					<div id="platformContainer"><section id="platform" class="sectionCard">
 						<span id="platform-editLabel" class="editFormInputLabel">Platform: </span>
-						<br>
 						<div id="platform-editContainer">
 						<select id="platform-edit" class="editFormInput" name="plaforms">
 							<option value=""></option>
@@ -51,30 +49,33 @@
 					</div>
 					</section></div>
 					<div id="spaceAvailableContainer"><section id="spaceAvailable" class="sectionCard">
-						<span id="spaceAvailable-editLabel" class="editFormInputLabel">Players Needed: </span><input id="spaceAvailable-edit" class="editFormInput" value="1" name="playersNeeded" type="number">
+						<span id="spaceAvailable-editLabel" class="editFormInputLabel">Players Needed: *</span><input id="spaceAvailable-edit" class="editFormInput" value="{{#if isEdit}}{{post.playersNeeded}}{{else}}1{{/if}}" name="playersNeeded" type="number">
 					</section></div>
 					<div id="timeDateContainer"><section id="timeDate" class="sectionCard">
-						<span id="timeDate-editLabel" class="editFormInputLabel">Time and Date: </span>
-						<br>
+						<span id="timeDate-editLabel" class="editFormInputLabel">Time and Date: *</span>
 						<input id="time-edit" class="editFormInput" type="time" name="postTime">
 						<input id="date-edit" class="editFormInput" type="date" name="postDate">
 					</section></div>
 					<div id="locationContainer"><section id="location" class="sectionCard">
-						<span id="location-editLabel" class="editFormInputLabel">Location: </span>
-						<br>
-						<input id="location-edit" class="editFormInput" value="" name="meetLocation">
+						<span id="location-editLabel" class="editFormInputLabel">Location: *</span>
+						<input id="location-edit" class="editFormInput" value="{{#if isEdit}}{{post.meetLocation}}{{/if}}" name="meetLocation">
 					</section></div>
 				</section></div>
 				<div id="postDetailsContainer"><section id="postDetails" class="sectionCard">
-					<h4 class="editFormInputLabel">Edit Post Details</h4>
+					<h4 class="editFormInputLabel">Edit Post Details *</h4>
 					<textarea id="userMessage-edit" class="editFormInput" name="details">{{#if isEdit}}{{post.details}}{{/if}}</textarea>
 				</section></div>
 				<div class="clearFloat"></div>
 				<button id="post-editSubmit">Submit!</button>
+				<i id="errorMsg">* required</i>
 				<div class="clearFloat"></div>
 			</section></form>
 		</section></div>
 	</section>
+
+	<script>
+		const isEdit = "{{isEdit}}"
+	</script>
 
 	<script src="/js/post-main.js"></script>
 	<script src="/js/post-edit.js"></script>
