--- a/final/views/post_view.hbs
+++ b/final/views/post_view.hbs
@@ -98,11 +98,11 @@
 				</form>
 			</section>
             {{#each post.comments}}
-			<section class="comment" data-commentId="{{this._id}}">
+			<section class="comment" id="{{this._id}}">
 				<div class="sectionCard userSection">
 					<img class="userProfilePic" src="{{this.user.profilePicUrl}}" alt="userProfilePic1">
 					<div class="userSectionInfo">
-						<h4 class="userName">{{this.user.name}}</h4>
+						<h4 class="userName" ><a href="/users/{{this.user.name}}">{{this.user.name}}</a></h4>
 						<span class="postDetailsLabel">Posted: <i>{{this.date}}</i></span>
 						<span class="postDetailsLabel">Location: <i>{{this.user.city}}</i></span>
 					</div>
@@ -110,10 +110,6 @@
 				<div class="userSectionOptionsContainer"><div class="userSectionOptions">
 					<svg class="userOptionsSVG" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 18c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3zm0-9c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3zm0-9c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3z"/></svg>
 					<ul class="userSectionOptionsList">
-						<li><a href="/users/{{this.user.name}}">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7.753 18.305c-.261-.586-.789-.991-1.871-1.241-2.293-.529-4.428-.993-3.393-2.945 3.145-5.942.833-9.119-2.489-9.119-3.388 0-5.644 3.299-2.489 9.119 1.066 1.964-1.148 2.427-3.393 2.945-1.084.25-1.608.658-1.867 1.246-1.405-1.723-2.251-3.919-2.251-6.31 0-5.514 4.486-10 10-10s10 4.486 10 10c0 2.389-.845 4.583-2.247 6.305z"/></svg>
-							View Profile
-						</a></li>
 						<li><a class="report" href="#">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M4 24h-2v-24h2v24zm18-22h-16v12h16l-4-5.969 4-6.031z"/></svg>
 							Report
@@ -139,6 +135,10 @@
 	<script>
 		const inviteIDs = "{{post.inviteReqs}}".split(",");
 		const postID = "{{post._id}}";
+        const userName = "{{user.name}}";
+        const userCity = "{{user.city}}";
+        const userIsAdmin = {{user.isAdmin}};
+        const creatorName = "{{post.creator.name}}";    
 	</script>
 	<script src="/js/post-main.js"></script>
 	<script src="/js/post-view.js"></script>
