--- a/final/public/styles/post-main.css
+++ b/final/public/styles/post-main.css
@@ -307,6 +307,9 @@ h4 {
 #requestInvite.requestJoin.active:before {
 	content: "REQUEST SENT";
 }
+#requestInvite.disable {
+
+}
 
 
 
@@ -403,7 +406,8 @@ h4 {
 	line-height: 1em;
 }
 .spaceAvailableSlotsImg {
-	opacity: 0.75;
+	position: relative;
+	/*opacity: 0.75;*/
 	display: inline-block;
 	margin-right: 10px;
 	margin-bottom: 10px;
@@ -412,6 +416,11 @@ h4 {
 	width: 50px;
 	cursor: pointer;
 	background-color: black;
+}
+.spaceAvailableSlotsImg img {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
 }
 
 section#commentFormContainer {
